fixing white space

--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,10 @@
 
 body {
   font-family: "Roboto Condensed", sans-serif;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0px !important;
+  padding: 0px !important;
   overflow-x: hidden; 
 }
 
